AAP-30113 Emphasize correct decision environment usage in docs (#2513)
* AAP-30113 Enhancements for the decision environments chapter

* AAP-30113 Enhancements for the decision environments chapter

* AAP-30113 More tweaks for decision environments topic

* AAP-30113 More tweaks for decision environments topic

* AAP-30113 Corrected URLs for supported DE images

* AAP-30113 Corrected URLs for supported DE images

* AAP-30113 Returned the URLs to the original for supported DEs

* AAP-30113 Created module based on automation controller topic, install ansible-builder

* AAP-30113 Created module based on automation controller topic, install ansible-builder

* AAP-30113 Created module based on automation controller topic, install ansible-builder

* AAP-30113 Updated sentence about adding de-supported DE to ansible-builder

* AAP-30113 Updated title of new chapter, Installing ansible-builder

* AAP-30113 Corrected the custom decision building process and updated other files accordingly

* AAP-30113 Corrected the custom decision building process and updated other files accordingly

* AAP-30113 Corrected the cross-ref ID for installing ansible-builder in assembly

* AAP-30113 Updated the building a custom DE chapter per comments from SME

* AAP-30113 Updated wording in new installing ansible-builder chapter

* AAP-30113 Minor update to the DE assembly

* AAP-30113 Final updates to the DE assembly

* AAP-30113 Final updates to the DE assembly

* AAP-30113 Added correct link attribute for the Builder guide

--- a/downstream/modules/eda/proc-eda-build-a-custom-decision-environment.adoc
+++ b/downstream/modules/eda/proc-eda-build-a-custom-decision-environment.adoc
@@ -4,7 +4,7 @@
 
 Decision Environments are {ExecEnvShort}s tailored towards running Ansible Rulebooks.
 
-Similar to {ExecEnvShort}s that run Ansible rulebooks for {ControllerName}, decision environments are designed to run rulebooks for {EDAcontroller}.
+Similar to {ExecEnvShort}s that run Ansible playbooks for {ControllerName}, decision environments are designed to run rulebooks for {EDAcontroller}.
 
 You can create a custom decision environment for {EDAName} that provides a custom maintained or third-party event source plugin that is not available in the default decision environment.
 
@@ -16,13 +16,16 @@ You can create a custom decision environment for {EDAName} that provides a custo
 
 .Procedure
 
-* Add the `de-supported` decision environment. 
-This image is built from a base image provided by Red Hat called `de-minimal` at link:https://catalog.redhat.com/software/containers/ansible-automation-platform-24/de-supported-rhel9/6449642e3993031ccdf4cf19[Ansible Automation Platform supported decision environment].
+* Use `de-minimal` as the base image with {Builder} to build your custom decision environments. 
+This image is built from a base image provided by Red Hat at link:https://catalog.redhat.com/software/containers/ansible-automation-platform-25/de-supported-rhel9/650a5674ad524b664b693729[{PlatformNameShort} supported decision environment].
 
 +
-[NOTE]
+[IMPORTANT]
 ====
-Red Hat recommends using `de-minimal` as the base image with {Builder} to build your custom decision environments.
+* Use the correct {EDAcontroller} decision environment in {PlatformNameShort} to prevent rulebook activation failure.
+
+** If you want to connect {EDAcontroller} to {PlatformNameShort} 2.4, you must use `registry.redhat.io/ansible-automation-platform-24/de-supported-rhel8:latest`
+** If you want to connect {EDAcontroller} to {PlatformNameShort} {PlatformVers}, you must use `registry.redhat.io/ansible-automation-platform-25/de-supported-rhel8:latest`
 ====
 
 The following is an example of the {Builder} definition file that uses `de-minimal` as a base image to build a custom decision environment with the ansible.eda collection:
@@ -31,7 +34,7 @@ version: 3
 
 images:
   base_image:
-    name: 'registry.redhat.io/ansible-automation-platform-24/de-minimal-rhel8:latest'
+    name: 'registry.redhat.io/ansible-automation-platform-25/de-minimal-rhel8:latest'
 
 dependencies:
   galaxy:
@@ -50,7 +53,7 @@ version: 3
 
 images:
   base_image:
-    name: 'registry.redhat.io/ansible-automation-platform-24/de-minimal-rhel8:latest'
+    name: 'registry.redhat.io/ansible-automation-platform-25/de-minimal-rhel8:latest'
 
 dependencies:
   galaxy:
