--- a/downstream/modules/eda/proc-eda-set-up-new-decision-environment.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-new-decision-environment.adoc
@@ -1,18 +1,17 @@
 [id="eda-set-up-new-decision-environment"]
 
 = Setting up a new decision environment
-// [ddacosta] I don't think there will be an EDA specific dashboard in the gateway. This might need to be changed to reflect the changes for 2.5.
-The following steps describe how to import a decision environment into your {EDAcontroller} Dashboard.
+
+You can import a decision environment into your {EDAcontroller} using a default or custom decision environment. 
 
 .Prerequisites
 
-//* You are logged in to the {EDAcontroller} Dashboard as a Content Consumer.
 * You have set up a credential, if necessary.
 For more information, see the xref:eda-set-up-credential[Setting up credentials] section.
-* You have pushed a decision environment image to an image repository or you chose to use the image `de-supported` provided at link:http://registry.redhat.io/[registry.redhat.io].
+* You have pushed a decision environment image to an image repository or you chose to use the `de-minimal` image that is provided by `de-supported` options located in link:http://registry.redhat.io/[registry.redhat.io].
 
 .Procedure
-// ddacosta I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
+
 . Log in to {PlatformNameShort}.
 . Navigate to {MenuADDecisionEnvironments}.
 . Click btn:[Create decision environment].
@@ -22,7 +21,7 @@ Name:: Insert the name.
 Description:: This field is optional.
 Organization:: Select an organization to associate with the decision environment.
 Image:: This is the full image location, including the container registry, image name, and version tag.
-Credential:: This field is optional. This is the token needed to use the decision environment image.
+Credential:: This field is optional. This is the credential needed to use the decision environment image.
 . Select btn:[Create decision environment].
 
 Your decision environment is now created and can be managed on the *Decision Environments* page.
