Added note about receptor not listening
Explain in documentation that receptor is not listening on first controller

https://issues.redhat.com/browse/AAP-23036

--- a/downstream/modules/platform/proc-define-mesh-node-types.adoc
+++ b/downstream/modules/platform/proc-define-mesh-node-types.adoc
@@ -158,7 +158,7 @@ Suppose you have a  Control plane with nodes A, B, C, D
 
 The RPM installer creates a strongly connected peering between the control plane nodes with a least privileged approach and opens the tcp listener only on those nodes where it is required. All the receptor connections are bidirectional, so once the connection is created, the receptor can communicate in both directions. 
 
-The following is an example peering set up for three controller nodes 
+The following is an example peering set up for three controller nodes:
 
 Controller node A --> Controller node B
 
