--- a/downstream/modules/platform/ref-receptor-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-receptor-inventory-variables.adoc
@@ -24,11 +24,11 @@ Default = `info`
 Default = `false`
 
 | | `receptor_peers` | Receptor peers list. 
-| | `receptor_port` | Receptor port. 
+| `receptor_listener_port` | `receptor_port` | Receptor port number.
 
 Default = `27199`
 
-| | `receptor_protocol` | Receptor protocol.
+| `receptor_listener_protocol` | `receptor_protocol` | Receptor protocol.
 
 Default = `tcp`
 
