--- a/downstream/modules/aap-hardening/con-rbac.adoc
+++ b/downstream/modules/aap-hardening/con-rbac.adoc
@@ -9,7 +9,7 @@
 
 As an administrator, you can use the _Role-Based Access Controls_ (RBAC) built into the {GatewayStart} to delegate access to server inventories, organizations, and more. 
 Administrators can also centralize the management of various credentials, enabling end users to use a needed secret without ever exposing that secret to the end user. 
-RBAC controls allow {PlatformNameShorrt} to help you increase security and streamline management.
+RBAC controls allow {PlatformNameShort} to help you increase security and streamline management.
 
 RBAC is the practice of granting roles to users or teams. 
 RBAC is easiest to think of in terms of Roles which define precisely who or what can see, change, or delete an “object” for which a specific capability is being set.
