Updating awx commands to gateway
OAuth2 product docs reference awx-manage instead of aap-gateway-manage

https://issues.redhat.com/browse/AAP-35735

Affects `titles/central-auth`

--- a/downstream/modules/platform/ref-controller-create-oauth2-token.adoc
+++ b/downstream/modules/platform/ref-controller-create-oauth2-token.adoc
@@ -6,7 +6,7 @@ Use the following command to create OAuth2 tokens (specify the username for `exa
 
 [literal, options="nowrap" subs="+attributes"]
 ----
-$ awx-manage create_oauth2_token --user example_user
+$ aap-gateway-manage create_oauth2_token --user example_user
 
 New OAuth2 token for example_user: j89ia8OO79te6IAZ97L7E8bMgXCON2
 ----
