--- a/downstream/modules/platform/ref-controller-revoke-oauth2-token.adoc
+++ b/downstream/modules/platform/ref-controller-revoke-oauth2-token.adoc
@@ -11,26 +11,26 @@ To revoke all existing OAuth2 tokens use the following command:
 
 [literal, options="nowrap" subs="+attributes"]
 ----
-$ awx-manage revoke_oauth2_tokens
+$ aap-gateway-manage revoke_oauth2_tokens
 ----
 
 To revoke all OAuth2 tokens and their refresh tokens use the following command:
 
 [literal, options="nowrap" subs="+attributes"]
 ----
-$ awx-manage revoke_oauth2_tokens --revoke_refresh
+$ aap-gateway-manage revoke_oauth2_tokens --revoke_refresh
 ----
 
 To revoke all OAuth2 tokens for the user with `id=example_user` (specify the username for `example_user`):
 
 [literal, options="nowrap" subs="+attributes"]
 ----
-$ awx-manage revoke_oauth2_tokens --user example_user
+$ aap-gateway-manage revoke_oauth2_tokens --user example_user
 ----
 
 To revoke all OAuth2 tokens and refresh token for the user with `id=example_user`:
 
 [literal, options="nowrap" subs="+attributes"]
 ----
-$ awx-manage revoke_oauth2_tokens --user example_user --revoke_refresh
+$ aap-gateway-manage revoke_oauth2_tokens --user example_user --revoke_refresh
 ----
