--- a/downstream/assemblies/platform/assembly-gw-token-based-authentication.adoc
+++ b/downstream/assemblies/platform/assembly-gw-token-based-authentication.adoc
@@ -21,7 +21,8 @@ include::platform/ref-controller-token-session-management.adoc[leveloffset=+2]
 include::platform/ref-controller-create-oauth2-token.adoc[leveloffset=+3]
 include::platform/ref-controller-revoke-oauth2-token.adoc[leveloffset=+3]
 include::platform/ref-controller-clear-tokens.adoc[leveloffset=+3]
-include::platform/ref-controller-expire-sessions.adoc[leveloffset=+3]
+//[emcwhinn - Temporarily hiding expire sessions module as it does not yet exist for gateway as per AAP-35735]
+//include::platform/ref-controller-expire-sessions.adoc[leveloffset=+3]
 include::platform/ref-controller-clear-sessions.adoc[leveloffset=+3]
 
 ifdef::parent-context[:context: {parent-context}]
