--- a/stories/assembly-azure-connecting-to-aap.adoc
+++ b/stories/assembly-azure-connecting-to-aap.adoc
@@ -13,7 +13,7 @@ include::topics/proc-azure-nw-public-deploy.adoc[leveloffset=+1]
 include::topics/proc-azure-nw-private-deploy.adoc[leveloffset=+1]
 include::topics/proc-azure-nw-private-deploy-az-hosted-vm.adoc[leveloffset=+2]
 include::topics/proc-azure-nw-private-deploy-vpn.adoc[leveloffset=+2]
-include::topics/proc-azure-nw-private-deploy-ssh-tunnel.adoc[leveloffset=+2]
+// include::topics/proc-azure-nw-private-deploy-ssh-tunnel.adoc[leveloffset=+2]
 // Accessing AAP
 include::topics/proc-azure-accessing-aap.adoc[leveloffset=+1]
 include::topics/proc-azure-license-association.adoc[leveloffset=+2]
