--- a/downstream/modules/platform/ref-hub-variables.adoc
+++ b/downstream/modules/platform/ref-hub-variables.adoc
@@ -263,5 +263,15 @@ Default = `30`
 
 Default = `main`
 
-|  | `hub_postinstall_repo_url` | {HubNameStart} repository URL. 
+|  | `hub_postinstall_repo_url` | {HubNameStart} repository URL.
+| | `hub_shared_data_path` | Required when installing more than one instance of {HubName} with a file storage backend. When installing a single instance of {HubName}, it is optional.
+
+Path to a Network File System (NFS) share with read, write, and execute (RWX) access.
+
+| | `hub_shared_data_mount_opts` | _Optional_
+
+Mount options for NFS share.
+
+Default = `rw,sync,hard`
+
 |====
