--- a/stories/topics/con-azure-aks-cidr.adoc
+++ b/stories/topics/con-azure-aks-cidr.adoc
@@ -44,7 +44,7 @@ It must be within the Kubernetes service address range specified in `serviceCidr
 Red Hat recommends using the first `.10` IP address within the Service CIDR block.
 | Pod CIDR | A CIDR notation IP range from which to assign pod IPs when kubenet is used. |  Requires a /19 or larger block.
 
-This CIDR block must not intersect with the CIDR of the service CIDR block.
+This CIDR block must not intersect with the CIDR of the Service CIDR block.
 
 |===
 
