Revision of hardening guide
Additional changes from Chris

Document how to secure and harden AAP

https://issues.redhat.com/browse/AAP-32887

--- a/downstream/modules/aap-hardening/con-planning-considerations.adoc
+++ b/downstream/modules/aap-hardening/con-planning-considerations.adoc
@@ -7,16 +7,16 @@
 
 [role="_abstract"]
 
-When planning an {PlatformNameShort} installation, ensure that the following components are included:
+{PlatformName} is composed of the following primary components:
 
-* Installer-manged components
-** {ControllerNameStart}
-** {EDAcontroller}
-** {PrivateHubNameStart}
-* PostgreSQL database (if not external)
-** External services
-** {InsightsName}
-** {HubNameStart}
-** `registry.redhat.io` (default {ExecEnvShort} container registry)
 
-See the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_planning_guide/platform-system-requirements[system requirements] section of the _{PlatformName} Planning Guide_ for additional information.
+
+* {ControllerNameStart}
+* Automation mesh
+* {PrivateHubNameStart}
+* {EDAcontroller}
+
+A PostgreSQL database is also provided, although a user-provided PostgreSQL database can be used as well.
+Red Hat recommends that customers always deploy all components of {PlatformNameShort} so that all features and capabilities are available for use without the need to take further action.
+
+For further information, see link:{URLPlanningGuide}/aap_architecture[{PlatformName} Architecture]
