--- a/downstream/modules/aap-hardening/con-deployment-methods.adoc
+++ b/downstream/modules/aap-hardening/con-deployment-methods.adoc
@@ -1,6 +1,6 @@
 [id="con-deployment-methods"]
 
-= {PlatformNameStart} deployment methods
+= {PlatformName} deployment methods
 
 There are three different installation methods for {PlatformNameShort}: 
 
@@ -9,5 +9,8 @@ There are three different installation methods for {PlatformNameShort}:
 * Operator-based on {OCP}  
 
 This document offers guidance on hardening {PlatformNameShort} when installed using either of the first two installation methods (RPM-based or container-based).  
-This document further recommends using the container-based installation method for new deployments, as the RPM-based installer is deprecated in the 2.5 release. 
+This document further recommends using the container-based installation method for new deployments, as the RPM-based installer will be deprecated in a future release. 
+
+For further information, see link:{URLReleaseNotes}/aap-2.5-deprecated-features#aap-2.5-deprecated-features[Deprecated features].
+
 Operator-based deployments are out of scope for this document.
