--- a/downstream/modules/aap-hardening/ref-infrastructure-as-code.adoc
+++ b/downstream/modules/aap-hardening/ref-infrastructure-as-code.adoc
@@ -17,12 +17,14 @@ The following Ansible content collections are available for managing {PlatformNa
 |===
 | *Validated Collection* | *Collection Purpose*
 | `infra.aap_utilities` | Ansible content for automating day 1 and day 2 operations of {PlatformNameShort}, including installation, backup and restore, certificate management, and more.
-
+// this will change to infra.aap_configuration
 | `infra.controller_configuration` | A collection of roles to manage {ControllerName} components, including managing users and groups (RBAC), projects, job templates and workflows, credentials, and more.
 
 | `infra.ah_configuration` | Ansible content for interacting with {HubName}, including users and groups (RBAC), collection upload and management, collection approval, managing the {ExecEnvShort} image registry, and more.
 
 | `infra.ee_utilities` | A collection of roles for creating and managing {ExecEnvShort} images, or migrating from the older Tower virtualenvs to execution environments.
+
+| `infra.eda_configuration` | 
 |===
 
 Many organizations use CI/CD platforms to configure pipelines or other methods to manage this type of infrastructure. However, using {PlatformNameShort} natively, a webhook can be configured to link a Git-based repository natively. In this way, Ansible can respond to git events to trigger Job Templates directly. This removes the need for external CI components from this overall process and thus reduces the attack surface.
