Revision of hardening guide
Corrections from review

Document how to secure and harden AAP

https://issues.redhat.com/browse/AAP-32887

--- a/downstream/modules/aap-hardening/ref-infrastructure-as-code.adoc
+++ b/downstream/modules/aap-hardening/ref-infrastructure-as-code.adoc
@@ -7,7 +7,7 @@
 
 [role="_abstract"]
 
-The Red Hat Community of Practice has created a set of automation content available via collections to manage {PlatformNameShort} infrastructure and configuration as code. 
+The Red Hat Community of Practice has created a set of automation content available through collections to manage {PlatformNameShort} infrastructure and configuration as code. 
 This enables automation of the platform itself through _Configuration as Code_ (CaC). 
 While many of the benefits of this approach are clear, there are critical security implications to consider.
 
