--- a/downstream/modules/aap-hardening/con-network-firewall-services-planning.adoc
+++ b/downstream/modules/aap-hardening/con-network-firewall-services-planning.adoc
@@ -10,7 +10,8 @@
 //{PlatformNameShort} requires access to a network to integrate to external auxiliary services and to manage target environments and resources such as hosts, other network devices, applications, cloud services. 
 //The link:{URLPlanningGuide}?ref-network-ports-protocols_planning[network ports and protocols] section of {TitlePlanningGuide} describes how {PlatformNameShort} components interact on the network as well as which ports and protocols are used, as shown in the following diagram:
 
-Review the Tested deployment models document to determine the topology that best suits your requirements.  The topology chosen will include planning information such as a topology diagram, the number of Red Hat Enterprise Linux servers required, the network ports and protocols used by the deployment, and load balancer information for enterprise topologies.
+Review the Tested deployment models document to determine the topology that best suits your requirements. 
+The topology chosen will include planning information such as a topology diagram, the number of Red Hat Enterprise Linux servers required, the network ports and protocols used by the deployment, and load balancer information for enterprise topologies.
 //.{PlatformNameShort} Network ports and protocols
 //image::aap-network-ports-protocols.png[Interaction of {PlatformNameShort} components on the network with information about the ports and protocols that are used.]
 
