Revision of hardening guide
Corrections

Document how to secure and harden AAP

https://issues.redhat.com/browse/AAP-32887

--- a/downstream/modules/aap-hardening/ref-architecture.adoc
+++ b/downstream/modules/aap-hardening/ref-architecture.adoc
@@ -3,18 +3,18 @@
 
 [id="ref-architecture_{context}"]
 
-= {PlatformNameShort} reference architecture
+= {PlatformNameShort} deployment topologies
 
 [role="_abstract"]
 
-Red Hat recommends installing {PlatformNameShort} {PlaformVers} based on one of the documented tested deployment topologies defined in link:{LinkTopologies}. 
+Install {PlatformNameShort} {PlaformVers} based on one of the documented tested deployment topologies defined in link:{LinkTopologies}. 
 Enterprise organizations should use one of the enterprise topologies for production deployments to ensure the highest level of uptime, performance, and continued scalability. 
 Organizations or deployments that are resource constrained can use a "growth" topology.
 Review the Tested deployment models document to determine the topology that best suits your requirements. 
 The topology chosen will include planning information such as a topology diagram, the number of {RHEL} servers required, the network ports and protocols used by the deployment, and load balancer information for enterprise topologies.
 
 It is possible to install the {PlatformNameShort} on different infrastructure topologies and with different environment configurations. 
-Red Hat does not fully test topologies outside of published deployment models, and recommends that all new deployments use a tested topology.
+Red Hat does not fully test topologies outside of published deployment models.
 
 The following diagram is a tested container enterprise topology:
 
