--- a/downstream/modules/aap-hardening/ref-aap-operational-secrets.adoc
+++ b/downstream/modules/aap-hardening/ref-aap-operational-secrets.adoc
@@ -1,15 +1,15 @@
 // Module included in the following assemblies: 
 // downstream/assemblies/assembly-hardening-aap.adoc
 
-[id="ref-automation-controller-operational-secrets_{context}"]
+[id="ref-aap-operational-secrets_{context}"]
 
-= {ControllerNameStart} operational secrets
+= {PlatformNameShort} operational secrets
 
 [role="abstract"]
 
-{ControllerNameStart} contains the following secrets used operationally:
+{PlatformNameShort} contains the following secrets used operationally:
 
-.{ControllerNameStart} operational secrets
+.{PlatformNameShort} operational secrets
 |===
 | *File* | *Details* 
 | `/etc/tower/SECRET_KEY` | A secret key used for encrypting automation secrets in the database. If the `SECRET_KEY` changes or is unknown, no encrypted fields in the database will be accessible.
