Revision of hardening guide
Removed xrefs

Document how to secure and harden AAP

https://issues.redhat.com/browse/AAP-32887

--- a/downstream/modules/aap-hardening/ref-complex-patching-scenarios.adoc
+++ b/downstream/modules/aap-hardening/ref-complex-patching-scenarios.adoc
@@ -15,6 +15,7 @@ The following example complex patching scenario demonstrates taking virtual mach
 
 The following workflow visualization shows how the components of the example complex patching scenario are executed:
 
+image:workflow.png[Workflow representation]
 
 .Additional resources
 For more information on workflows, see link:{URLControllerUserGuide}/controller-workflows[Workflows in automation controller].
