--- a/stories/topics/con-saas-shape.adoc
+++ b/stories/topics/con-saas-shape.adoc
@@ -4,8 +4,9 @@
 
 Your execution plane's size and shape depend on the type of automation and the locations connected to the mesh. Use the following guidelines for your automation mesh implementation:
 
-* {PlatformNameShort} minimum requirements:
-** Hop Nodes: Required only when not using the push model. They typically require minimal resources. The shape of a hop node depends on the number of connected execution nodes. A virtual machine (VM) with 2 vCPUs and 2 GB RAM can route traffic for 2-4 execution nodes. 
+{PlatformNameShort} minimum requirements:
+
+* Hop Nodes: Red Hat Ansible Automation Platform Service on AWS includes two hop nodes that customers can use to peer with execution nodes. They typically require minimal resources. The shape of a hop node depends on the number of connected execution nodes. A virtual machine (VM) with 2 vCPUs and 2 GB RAM can route traffic for 2-4 execution nodes. 
 ** For help with configuring your automation mesh see
 link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_mesh_for_managed_cloud_or_operator_environments/index[Automation mesh for managed cloud or operator environments].
 * For automation in fewer locations (such as specific geographies or clouds), create a mesh with fewer VMs that can be scaled vertically. Most clouds and hypervisors allow shape changes with minimal downtime.
