--- a/downstream/titles/hub/managing-content/master.adoc
+++ b/downstream/titles/hub/managing-content/master.adoc
@@ -10,6 +10,11 @@ include::attributes/attributes.adoc[]
 include::{Boilerplate}[]
 
 include::hub/assembly-managing-cert-valid-content.adoc[leveloffset=+1]
+include::hub/assembly-syncing-to-cloud-repo.adoc[leveloffset=+1]
+include::hub/assembly-synclists.adoc[leveloffset=+1]
+include::hub/assembly-collections-and-content-signing-in-pah.adoc[leveloffset=+1]
+//include::hub/assembly-faq.adoc[leveloffset=+1]
+include::hub/assembly-validated-content.adoc[leveloffset=+1]
 
 include::hub/assembly-managing-collections-hub.adoc[leveloffset=+1]
 
