Revision of hardening guide
Corrections from peer review

Document how to secure and harden AAP

https://issues.redhat.com/browse/AAP-32887

--- a/downstream/assemblies/aap-hardening/assembly-intro-to-aap-hardening.adoc
+++ b/downstream/assemblies/aap-hardening/assembly-intro-to-aap-hardening.adoc
@@ -10,20 +10,20 @@ ifdef::context[:parent-context: {context}]
 
 This document provides guidance for improving the security posture (referred to as “hardening” throughout this guide) of your {PlatformName} deployment on {RHEL}.
 
-The following are not currently withoin the scope of this guide:
+The following are not currently within the scope of this guide:
 
 * Other deployment targets for {PlatformNameShort}, such as OpenShift.
 * {PlatformNameShort} managed services available through cloud service provider marketplaces.
-* Additional considerations with regards to the _Defense Information Systems Agency_ (DISA) _Security Technical Implementation Guides_ (STIGs)
+//* Additional considerations with regards to the _Defense Information Systems Agency_ (DISA) _Security Technical Implementation Guides_ (STIGs)
 
 [NOTE]
 ====
-Hardening and compliance for {PlatformNameShort} 2.4 includes additional considerations with regards to the DISA STIGs, but this guidance does not apply to {PlatformNameShort} {PlatformVers}.
+Hardening and compliance for {PlatformNameShort} 2.4 includes additional considerations with regards to the specific _Defense Security Information Agency_ (DISA) _Security Technical Implementation Guides_ (STIGs), but this guidance does not apply to {PlatformNameShort} {PlatformVers}.
 ====
 
 This guide takes a practical approach to hardening the {PlatformNameShort} security posture, starting with the planning and architecture phase of deployment and then covering specific guidance for installation, initial configuration, and day 2 operations. 
 As this guide specifically covers {PlatformNameShort} running on {RHEL}, hardening guidance for {RHEL} will be covered where it affects the automation platform components. 
-//Additional considerations with regards to the Defense Information Systems Agency (DISA) Security Technical Implementation Guides (STIGs) are provided for those organizations that integrate the DISA STIG as a part of their overall security strategy.
+Additional considerations with regards to the Defense Information Systems Agency (DISA) Security Technical Implementation Guides (STIGs) for {RHEL} are provided for those organizations that integrate the DISA STIGs as a part of their overall security strategy.
 
 [NOTE]
 ====
