--- a/downstream/modules/aap-hardening/con-platform-components.adoc
+++ b/downstream/modules/aap-hardening/con-platform-components.adoc
@@ -7,7 +7,7 @@
 
 [role="_abstract"]
 
-{PlatformNameShort} is a modular platform composed of separate components that can be connected together, including {ControllerName}, {GatewayStart},{HubName}, and {EDAcontroller}.
+{PlatformNameShort} is a modular platform composed of separate components that can be connected together, including {ControllerName}, {Gateway}, {HubName}, and {EDAcontroller}.
 
 [role="_additional-resources"]
 .Additional resources
