--- a/downstream/modules/aap-hardening/con-rbac.adoc
+++ b/downstream/modules/aap-hardening/con-rbac.adoc
@@ -7,7 +7,7 @@
 
 [role="_abstract"]
 
-As an administrator, you can use the _Role-Based Access Controls_ (RBAC) built into the {GatewayStart} to delegate access to server inventories, organizations, and more. 
+As an administrator, you can use the _Role-Based Access Controls_ (RBAC) built into the {Gateway} to delegate access to server inventories, organizations, and more. 
 Administrators can also centralize the management of various credentials, enabling end users to use a needed secret without ever exposing that secret to the end user. 
 RBAC controls allow {PlatformNameShort} to help you increase security and streamline management.
 
