--- a/downstream/modules/aap-hardening/ref-aap-authentication.adoc
+++ b/downstream/modules/aap-hardening/ref-aap-authentication.adoc
@@ -7,31 +7,32 @@
 
 [role="_abstract"]
 
-{ControllerNameStart} currently supports the following external authentication mechanisms through the {GatewayStart} UI:
+{ControllerNameStart} currently supports the following external authentication mechanisms through the {Gateway} UI:
 
-* Azure Activity Directory
-* GitHub single sign-on
-** GitHub
-** GitHub Organization
-** GitHub team
-** GitHub enterprise
-** GitHub enterprise organization
-** GitHub enterprise team
-* Google OAuth2 single sign-in
+* Local
 * LDAP
-* RADIUS
 * SAML
 * TACACS+
-* Generic OIDC
+* Radius
+* Azure Active Directory
+* Google OAuth
+* Genewric OIDC
 * Keycloak
+* GitHub single sign-on
+* GitHub
+* GitHub Organization
+* GitHub team
+* GitHub enterprise
+* GitHub enterprise organization
+* GitHub enterprise team
 
 Choose an authentication mechanism that adheres to your organization's authentication policies. 
 The authentication mechanism used must ensure that the authentication-related traffic between {PlatformNameShort} and the authentication back-end is encrypted when the traffic occurs on a public or non-secure network (for example, LDAPS or LDAP over TLS, HTTPS for OAuth2 and SAML providers, etc.).
 
 For more information on authentication methods, see link:{URLCentralAuth}/gw-configure-authentication#gw-config-authentication-type[Configuring an authetication type].
 
-In {GatewayStart}, any “system administrator” account can edit, change, and update any inventory or automation definition. 
-Restrict these account privileges to the minimum set of users possible for low-level {ControllerName} configuration and disaster recovery.
+In the {Gateway}, any “system administrator” account can edit, change, and update any inventory or automation definition. 
+Restrict these account privileges to the minimum set of users possible for low-level {PlatformNameShort} configuration and disaster recovery.
 
 
 
