--- a/downstream/modules/aap-hardening/ref-dns-load-balancing.adoc
+++ b/downstream/modules/aap-hardening/ref-dns-load-balancing.adoc
@@ -8,5 +8,5 @@
 [role="_abstract"]
 
 When using a load balancer with {PlatformNameShort} as described in the deployment topology, an additional FQDN is needed for the load-balancer.
-For example, an FQDN such as `aap.example.com` might be used for the load balancer which in turn directs traffic to each of the {GatewayStart} components defined in the installation inventory.
+For example, an FQDN such as `aap.example.com` might be used for the load balancer which in turn directs traffic to each of the {Gateway} components defined in the installation inventory.
 
