--- a/downstream/modules/aap-hardening/ref-initial-configuration.adoc
+++ b/downstream/modules/aap-hardening/ref-initial-configuration.adoc
@@ -13,9 +13,9 @@ Apply the following practices to help secure access:
 * Minimize access to system administrative accounts. 
 There is a difference between the user interface (web interface) and access to the operating system that the {ControllerName} is running on. 
 A system administrator or root user can access, edit, and disrupt any system application. 
- with root access to the controller has the potential ability to decrypt those credentials, and so minimizing access to system administrative accounts is crucial for maintaining a secure system.
+Anyone with root access to {ControllerName} has the potential ability to decrypt those credentials, and so minimizing access to system administrative accounts is crucial for maintaining a secure system.
 * Minimize local system access. {ControllerNameStart} should not require local user access except for administrative purposes. 
-Non-administrator users should not have access to the controller system.
+Non-administrator users should not have access to the {ControllerName} system.
 * Enforce separation of duties. 
 Different components of automation may need to access a system at different levels. 
 Use different keys or credentials for each component so that the effect of any one key or credential vulnerability is minimized.
