--- a/downstream/modules/aap-hardening/ref-security-variables-install-inventory.adoc
+++ b/downstream/modules/aap-hardening/ref-security-variables-install-inventory.adoc
@@ -15,7 +15,7 @@ The following table lists a number of security-relevant variables and their reco
 [cols="25%,25%,25%,25%",options="header"]
 |===
 | *RPM Variable* | *Containerized Variable* | *Recommended Value* | *Details*
-| `postgres_use_ssl` | `postgre_disable_tls` |true | Determines if the connection between Ansible Automation Platform and the PostgreSQL database should use SSL/TLS. 
+| `postgres_use_ssl` | `postgres_disable_tls` | true | Determines if the connection between Ansible Automation Platform and the PostgreSQL database should use SSL/TLS. 
 
 The default for this variable is false which means SSL/TLS is not used for PostgreSQL connections. 
 
