--- a/downstream/modules/platform/proc-controller-set-up-logging.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-logging.adoc
@@ -68,7 +68,7 @@ image:configure-controller-system-logging-splunk-example.png[Splunk logging exam
 endif::controller-AG[]
 * *Enable External Logging*: Select this checkbox if you want to send logs to an external log aggregator.
 * *Enable/disable HTTPS certificate verification*: Certificate verification is enabled by default for the HTTPS log protocol.
-Select this checkbox if yoiu want the log handler to verify the HTTPS certificate sent by the external log aggregator before establishing a connection.
+Select this checkbox if you want the log handler to verify the HTTPS certificate sent by the external log aggregator before establishing a connection.
 * *Enable rsyslogd debugging*: Select this checkbox to enable high verbosity debugging for `rsyslogd`. 
 Useful for debugging connection issues for external log aggregation.
 
