--- a/downstream/modules/aap-hardening/ref-keep-up-to-date.adoc
+++ b/downstream/modules/aap-hardening/ref-keep-up-to-date.adoc
@@ -2,8 +2,8 @@
 
 = Keeping everything up to date
 
-For some RHEL servers, such as a lab or other non-production systems, you might want to install all available patches on a regular cadence. 
-he following example playbook might be used in a job template that is scheduled to run weekly, and updates the system with all of the latest RPMs.
+For some {RHEL} servers, such as a lab or other non-production systems, you might want to install all available patches on a regular cadence. 
+The following example playbook might be used in a job template that is scheduled to run weekly, and updates the system with all of the latest RPMs.
 
 ----
 - name: Install all available RPM updates
