Revision of hardening guide
Corrections

Document how to secure and harden AAP

https://issues.redhat.com/browse/AAP-32887

--- a/downstream/assemblies/aap-hardening/assembly-intro-to-aap-hardening.adoc
+++ b/downstream/assemblies/aap-hardening/assembly-intro-to-aap-hardening.adoc
@@ -18,7 +18,7 @@ The following are not currently within the scope of this guide:
 
 [NOTE]
 ====
-Hardening and compliance for {PlatformNameShort} 2.4 includes additional considerations with regards to the specific _Defense Security Information Agency_ (DISA) _Security Technical Implementation Guides_ (STIGs), but this guidance does not apply to {PlatformNameShort} {PlatformVers}.
+Hardening and compliance for {PlatformNameShort} 2.4 includes additional considerations with regards to the specific _Defense Security Information Agency_ (DISA) _Security Technical Implementation Guides_ (STIGs) for {ControllerName}, but this guidance does not apply to {PlatformNameShort} {PlatformVers}.
 ====
 
 This guide takes a practical approach to hardening the {PlatformNameShort} security posture, starting with the planning and architecture phase of deployment and then covering specific guidance for installation, initial configuration, and day 2 operations. 
