--- a/downstream/modules/aap-hardening/con-network-firewall-services-planning.adoc
+++ b/downstream/modules/aap-hardening/con-network-firewall-services-planning.adoc
@@ -14,7 +14,7 @@
 //image::aap-network-ports-protocols.png[Interaction of {PlatformNameShort} components on the network with information about the ports and protocols that are used.]
 
 When planning firewall or cloud network security group configurations related to {PlatformNameShort}, see the 
-'Network Ports' section of your chosen topology in link:{LinkTopologies}
+"Network Ports" section of your chosen topology in link:{LinkTopologies}
 //link:{URLPlanningGuide}?ref-network-ports-protocols_planning[network ports and protocols] section of {TitlePlanningGuide} 
 to understand what network ports need to be opened on a firewall or security group.
 
