--- a/downstream/modules/aap-hardening/con-platform-components.adoc
+++ b/downstream/modules/aap-hardening/con-platform-components.adoc
@@ -7,8 +7,8 @@
 
 [role="_abstract"]
 
-{PlatformNameShort} is a modular platform that includes {ControllerName}, {HubName}, {EDAcontroller}, and {InsightsShort}.
+{PlatformNameShort} is a modular platform composed of separate components that can be connected together, including {ControllerName}, {Gateway}, {HubName}, and {EDAcontroller}.
 
 [role="_additional-resources"]
 .Additional resources
-For more information about the components provided within {PlatformNameShort}, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_planning_guide/ref-aap-components[Red Hat Ansible Automation Platform components] in the _Red Hat Ansible Automation Platform Planning Guide_.
+For more information about the components provided within {PlatformNameShort}, see link:{URLPlanningGuide}/ref-aap-components[Red Hat Ansible Automation Platform components] in _Planning your installation_.
