--- a/downstream/modules/aap-hardening/con-credential-management-planning.adoc
+++ b/downstream/modules/aap-hardening/con-credential-management-planning.adoc
@@ -7,10 +7,11 @@
 
 [role="_abstract"]
 
-{ControllerNameStart} uses credentials to authenticate requests to jobs against machines, synchronize with inventory sources, and import project content from a version control system. {ControllerNameStart} manages three sets of secrets:
+{PlatformName} uses credentials to authenticate requests to jobs against machines, synchronize with inventory sources, and import project content from a version control system. {ControllerNameStart} manages three sets of secrets:
 
-* User passwords for *local automation controller users*. See the xref:con-user-authentication-planning_{context}[User Authentication Planning] section of this guide for additional details.
-* Secrets for automation controller *operational use* (database password, message bus password, and so on).
+* User passwords for *local {PlatformNameShort} users*. 
+//See the xref:con-user-authentication-planning_{context}[User Authentication Planning] section of this guide for additional details.
+* Secrets for {PlatformNameShort} *operational use* (database password, message bus password, and so on).
 * Secrets for *automation use* (SSH keys, cloud credentials, external password vault credentials, and so on).
 
 Implementing a privileged access or credential management solution to protect credentials from compromise is a highly recommended practice. Organizations should audit the use of, and provide additional programmatic control over, access and privilege escalation.
