--- a/downstream/modules/aap-hardening/ref-architecture.adoc
+++ b/downstream/modules/aap-hardening/ref-architecture.adoc
@@ -3,15 +3,24 @@
 
 [id="ref-architecture_{context}"]
 
-= {PlatformNameShort} reference architecture
+= {PlatformNameShort} deployment topologies
 
 [role="_abstract"]
 
-For large-scale production environments with availability requirements, this guide recommends deploying the components described in section 2.1 of this guide using the instructions in the xref:ref-architecture_{context}[reference architecture] documentation for {PlatformName} on {RHEL}. While some variation may make sense for your specific technical requirements, following the reference architecture results in a supported production-ready environment.
+Install {PlatformNameShort} {PlaformVers} based on one of the documented tested deployment topologies defined in link:{LinkTopologies}. 
+Enterprise organizations should use one of the enterprise topologies for production deployments to ensure the highest level of uptime, performance, and continued scalability. 
+Organizations or deployments that are resource constrained can use a "growth" topology.
+Review the Tested deployment models document to determine the topology that best suits your requirements. 
+The topology chosen will include planning information such as a topology diagram, the number of {RHEL} servers required, the network ports and protocols used by the deployment, and load balancer information for enterprise topologies.
+
+It is possible to install the {PlatformNameShort} on different infrastructure topologies and with different environment configurations. 
+Red Hat does not fully test topologies outside of published deployment models.
+
+The following diagram is a tested container enterprise topology:
 
 .Reference architecture overview
-image::aap-ref-architecture-322.png[Reference architecture for an example setup of an {PlatformNameShort} deployment for large scale production environments]
+image::cont-b-env-a.png[Infrastructure topology that Red Hat has tested that customers can use when self-managing {PlatformNameShort}]
 
-{EDAName} is a new feature of {PlatformNameShort} {PlatformVers} that was not available when the reference architecture detailed in Figure 1: Reference architecture overview was originally written. Currently, the supported configuration is a single {ControllerName}, single {HubName}, and single {EDAController} node with external (installer managed) database. For an organization interested in {EDAName}, the recommendation is to install according to the configuration documented in the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_installation_guide/assembly-platform-install-scenario#ref-single-controller-hub-eda-with-managed-db[{PlatformNameShort} Installation Guide]. This document provides additional clarifications when {EDAName} specific hardening configuration is required.
+//{EDAName} is a new feature of {PlatformNameShort} {PlatformVers} that was not available when the reference architecture detailed in Figure 1: Reference architecture overview was originally written. Currently, the supported configuration is a single {ControllerName}, single {HubName}, and single {EDAController} node with external (installer managed) database. For an organization interested in {EDAName}, the recommendation is to install according to the configuration documented in the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_installation_guide/assembly-platform-install-scenario#ref-single-controller-hub-eda-with-managed-db[{PlatformNameShort} Installation Guide]. This document provides additional clarifications when {EDAName} specific hardening configuration is required.
 
-For smaller production deployments where the full reference architecture may not be needed, this guide recommends deploying {PlatformNameShort} with a dedicated PostgreSQL database server whether managed by the installer or provided externally.
+//For smaller production deployments where the full reference architecture may not be needed, this guide recommends deploying {PlatformNameShort} with a dedicated PostgreSQL database server whether managed by the installer or provided externally.
