--- a/downstream/titles/aap-hardening/master.adoc
+++ b/downstream/titles/aap-hardening/master.adoc
@@ -3,6 +3,7 @@
 :toclevels: 1
 
 :experimental:
+:hardening:
 
 include::attributes/attributes.adoc[]
 
@@ -15,5 +16,5 @@ This guide provides recommended practices for various processes needed to instal
 include::{Boilerplate}[]
 include::aap-hardening/assembly-intro-to-aap-hardening.adoc[leveloffset=+1]
 include::aap-hardening/assembly-hardening-aap.adoc[leveloffset=+1]
-// include::aap-hardening/assembly-aap-compliance.adoc[leveloffset=+1]
-// include::aap-hardening/assembly-aap-security-enabling.adoc[leveloffset=+1]
+//include::aap-hardening/assembly-aap-compliance.adoc[leveloffset=+1]
+include::aap-hardening/assembly-aap-security-use-cases.adoc[leveloffset=+1]
