Update per peer review

--- a/downstream/modules/platform/proc-controller-credential-create-openshift-account.adoc
+++ b/downstream/modules/platform/proc-controller-credential-create-openshift-account.adoc
@@ -8,7 +8,7 @@ After you create the service account, its credentials are provided to {Controlle
 After you create a service account, use the information in the new service account to configure {ControllerName}.
 
 .Procedure
-. To create a service account, download and use the sample service account, `containergroup sa` and change it as needed to obtain the credentials:
+. To create a service account, download and use the sample service account, `containergroup sa`, and change it as needed to obtain the credentials:
 +
 [literal, options="nowrap" subs="+attributes"]
 ----
