Editing sample service account details (#2583)
* Editing sample service account details

Update sample service account details

https://issues.redhat.com/browse/AAP-36116

Affects `titles/controller-user-guide`

* Update per peer review

--- a/downstream/modules/platform/proc-controller-credential-create-openshift-account.adoc
+++ b/downstream/modules/platform/proc-controller-credential-create-openshift-account.adoc
@@ -8,8 +8,49 @@ After you create the service account, its credentials are provided to {Controlle
 After you create a service account, use the information in the new service account to configure {ControllerName}.
 
 .Procedure
-. To create a service account, download and use the link:https://docs.ansible.com/automation-controller/latest/html/userguide/_downloads/7a0708e6c2113e9601bf252270fa6c50/containergroup-sa.yml[sample service account] and change it as required to obtain the previous credentials.
-. Apply the configuration from the link:https://docs.ansible.com/automation-controller/latest/html/userguide/_downloads/7a0708e6c2113e9601bf252270fa6c50/containergroup-sa.yml[sample service account]:
+. To create a service account, download and use the sample service account, `containergroup sa`, and change it as needed to obtain the credentials:
++
+[literal, options="nowrap" subs="+attributes"]
+----
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: containergroup-service-account
+  namespace: containergroup-namespace
+---
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: role-containergroup-service-account
+  namespace: containergroup-namespace
+rules:
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+- apiGroups: [""]
+  resources: ["pods/log"]
+  verbs: ["get"]
+- apiGroups: [""]
+  resources: ["pods/attach"]
+  verbs: ["get", "list", "watch", "create"]
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: role-containergroup-service-account-binding
+  namespace: containergroup-namespace
+subjects:
+- kind: ServiceAccount
+  name: containergroup-service-account
+  namespace: containergroup-namespace
+roleRef:
+  kind: Role
+  name: role-containergroup-service-account
+  apiGroup: rbac.authorization.k8s.io
+----
++
+. Apply the configuration from `containergroup-sa.yml`:
 +
 [literal, options="nowrap" subs="+attributes"]
 ----
